# poodillion2

./: -o  .dockerignore  .env.example  .gitignore  61_string_concat  AUTOUPDATE_DESIGN.md  BOOT_SUCCESS.md  BOOT_UTILITIES.md  BRAINHAIR_OS_ROADMAP.md  BRAINHAIR_SUCCESS.md  COMPARISON_FIX.md  CURRENT_STATE.md  DECEMBER_1990.md  DISPLAY_ROADMAP.md  Dockerfile  FIX_SUMMARY.md  GRAPHICS_PLAN.md  GRUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  INTERACTIVE_MODE.md  KERNEL_ARCHITECTURE.md  LICENSE  MININIM_SUCCESS.md  Makefile  NETWORK_DEVICES.md  POLY1305_IMPLEMENTATION.md  POOGET_STATUS.md  PROCESS_UTILS.md  PTHREAD_IMPLEMENTATION.md  QUICKSTART.md  QUICKSTART_INTERACTIVE.md  README.md  REF_IMPLEMENTATION_SUMMARY.md  REF_KEYWORD.md  SCENARIOS_UPDATED.md  SHELL_UTILITIES.md  SYMLINK_IMPLEMENTATION.md  SYNC_IMPLEMENTATION.md  SYSINFO_UTILITIES.md  TERMINAL_UTILS.md  (+58 more)
boot/: README.md  boot.asm  boot64.asm  grub.cfg  linker.ld  linker64.ld  linker_grub.ld  multiboot.asm  stage1.asm  stage2.asm  stage2_64.asm  stage2_fixed.asm  stage2_minimal.asm  stage2_test.asm  stage2_ultra_simple.asm  test_pmode.asm
commands/: __init__.py  fs.py  proc.py  system.py  utils.py
compiler/: ERROR_HANDLING_GUIDE.md  ERROR_SYSTEM_README.md  ERROR_SYSTEM_SUMMARY.txt  INTEGRATION_GUIDE.md  ast_nodes.py  ast_to_mir.py  basm.asm  basm.asm.asm  bhasm.asm  bhbuild.asm  bhdisk.asm  bhkernel.asm  cp.asm  (+56 more)
vtnext/client-py/: pyproject.toml
vtnext/client-py/vtnext/: __init__.py  client.py  commands.py  events.py
vtnext/renderer/: Cargo.toml
vtnext/renderer/src/: main.rs
vtnext/renderer/src/input/: mod.rs
vtnext/renderer/src/protocol/: commands.rs  mod.rs  parser.rs  types.rs
vtnext/renderer/src/render/: image.rs  mod.rs  renderer.rs  shapes.rs  text.rs
(+857 files in other folders)
