[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtnext"
version = "0.1.0"
description = "Python client for VTNext next-generation terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "VTNext Contributors" }
]
keywords = ["terminal", "graphics", "vt100", "opengl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/vtnext/vtnext"
Documentation = "https://github.com/vtnext/vtnext"
Repository = "https://github.com/vtnext/vtnext"
