[package]
name = "vtnext-renderer"
version = "0.1.0"
edition = "2021"
description = "Next-generation terminal renderer with OpenGL"

[dependencies]
# Windowing and OpenGL
glutin = "0.31"
winit = "0.29"
glow = "0.13"                    # OpenGL bindings
raw-window-handle = "0.5"
glutin-winit = "0.4"

# Font rendering
ab_glyph = "0.2"

# Image handling
image = "0.24"
base64 = "0.21"

# Parsing
nom = "7.1"                      # For escape sequence parsing

# Async IO
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bytemuck = "1.14"
